# AndroidPtraceInject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh
Hook/: CMakeLists.txt  hook.cpp
Hook/include/: Logger.h
Inject/: CMakeLists.txt  inject.cpp
Inject/include/: Ptrace.h  PtraceInject.h
Inject/include/Utils/: PtraceUtils.h  Utils.h
outputs/arm64-v8a/: Inject
outputs/armeabi-v7a/: Inject
outputs/x86/: Inject
outputs/x86_64/: Inject
res/: log_Android11_arm32_succeed.txt  log_Android11_arm64.txt  log_Android11_arm64_fixed.txt  log_Android11_x86.txt  log_Android11_x86_succeed.txt  log_Android9_arm32_failed.txt  log_Android9_arm64_succeed.txt
